Support for getting a single modem
