# swagger_server/models/__init__.py
@@ -3,4 +3,6 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from swagger_server.models.gig_interface_config import GigInterfaceConfig
 from swagger_server.models.lte_interface_proto_modem_info_hardware import LTEInterfaceProtoModemInfoHardware
+from swagger_server.models.std_response import StdResponse
